--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -35,7 +35,7 @@ header {
     justify-content: center;
     border-radius: 8px;
     background: var(--gra-purpleblue-to-skyblue);
-    color: var(--Grey-Light);
+    color: var(--Grey-light);
     font-size: 1.8rem;
     font-weight: 600;
     text-decoration: none;
